// Vitest Snapshot v1

exports[`AlertDialog > should render an accessible \`alertdialog\` despite not showing the title visually 1`] = `
<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-:r3:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-state="open"
      type="button"
    >
      Open the dialog
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="_overlay_e6bcc0"
      data-aria-hidden="true"
      data-state="open"
      style="pointer-events: auto;"
    />
    <div
      aria-describedby="radix-:r5:"
      aria-labelledby="radix-:r4:"
      class="_content_e6bcc0"
      data-state="open"
      id="radix-:r3:"
      role="alertdialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <h2
        class="_title_e6bcc0"
        id="radix-:r4:"
      >
        This is important!
      </h2>
      <p
        class="_description_e6bcc0"
        id="radix-:r5:"
      >
        Are you sure about all of that stuff?
      </p>
      <footer>
        <button
          type="button"
        >
          Cancel
        </button>
        <button
          type="button"
        >
          Yes, do it!
        </button>
      </footer>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`AlertDialog > should render correctly 1`] = `
<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-:r0:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-state="open"
      type="button"
    >
      Open the dialog
    </button>
  </div>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="_overlay_e6bcc0"
      data-aria-hidden="true"
      data-state="open"
      style="pointer-events: auto;"
    />
    <div
      aria-describedby="radix-:r2:"
      aria-labelledby="radix-:r1:"
      class="_content_e6bcc0"
      data-state="open"
      id="radix-:r0:"
      role="alertdialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <h2
        class="_title_e6bcc0"
        id="radix-:r1:"
      >
        This is important!
      </h2>
      <p
        class="_description_e6bcc0"
        id="radix-:r2:"
      >
        Are you sure about all of that stuff?
      </p>
      <footer>
        <button
          type="button"
        >
          Cancel
        </button>
        <button
          type="button"
        >
          Yes, do it!
        </button>
      </footer>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
